# aI-labor-impact-observatory

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
analysis/: 01_descriptives.py  02_regressions.py  03_figures.py  04_dashboard.py
dashboard/: index.html
data_raw/: SOURCES.md
docs/: project-1-ai-labor-impact-observatory.md
reports/: data_dictionary.md  descriptives.txt  methodology.md  policy_memo.md  regressions.txt  research_design_v2.md  task_validation.md
src/: crosswalk.py  ingest.py
tests/: conftest.py  test_crosswalk.py  test_crosswalk_pure.py
warehouse/dbt/: dbt_project.yml  profiles.yml
warehouse/dbt/models/marts/: mart_occupation_exposure.sql  schema.yml
warehouse/dbt/models/staging/: sources.yml  stg_aei_job_exposure.sql  stg_aei_task_penetration.sql  stg_eloundou.sql  stg_oews.sql  stg_onet_gwa_hierarchy.sql  stg_onet_job_zones.sql  stg_onet_ratings.sql  stg_onet_soc_crosswalk.sql  stg_onet_tasks.sql  stg_onet_tasks_to_dwas.sql
warehouse/dbt/tests/: assert_health_admin_share_populated.sql  assert_no_dropped_occupations.sql  assert_soc_unique.sql
